# jeopardy

./: .gitignore  README.md  RELEASE_NOTES.md  audio_utils.py  board.py  build.bat  edit_mode.py  main.py  media_widget.py  package-lock.json  package.json  play_mode.py  requirements.txt  slide_widgets.py
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
backend/: desktop_entry.py  jeopardy-backend.spec  pyproject.toml  rhubarb-backend.spec
backend/app/: main.py  models.py  session.py  storage.py
backend/app/routers/: assets.py  boards.py  game.py  live.py
backend/tests/: conftest.py  test_assets.py  test_boards_crud.py  test_cells_settings.py  test_history.py  test_import_export.py  test_live_session.py  test_migration.py  test_players.py  test_review_fixes.py  test_turns.py
desktop/: README.md  electron-builder.yml  main.cjs  package-lock.json  package.json  preload.cjs
desktop/scripts/: fetch-cloudflared.cjs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: boards.ts  client.ts
frontend/src/components/controller/: BuzzerButton.tsx  (+4 more)
frontend/src/hooks/: useHotkeys.ts  usePageTitle.ts  useStackedAudio.ts
frontend/src/lib/: desktop.ts  format.ts  live.ts  media.ts  modalState.ts  releaseNotes.ts  sfx.ts
frontend/src/routes/: __root.tsx  boards.$boardId.edit.tsx  boards.$boardId.play.tsx  index.tsx  join.tsx
frontend/src/types/: board.ts
legacy/: main.py  media_widget.py  play_mode.py  players.py  requirements.txt
(+38 files in other folders)
