[project]
name = "chaewon-jeopardy-backend"
version = "0.1.0"
description = "FastAPI backend for the Chaewon Jeopardy game builder/player"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pyinstaller>=6.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
